# Laboratory

./: .gitignore
ads/: CMakeLists.txt
ads/01-Kommivoyazhor/: CMakeLists.txt  Kommivoyazhor.cpp  README.md  vcpkg.json
ads/02-bmsearch/: CMakeLists.txt  vcpkg.json
ads/02-bmsearch/source/: bmsearch  bmsearch.cpp  main.cxx
ads/03-shell/: CMakeLists.txt
ads/03-shell/source/: shell.cpp
ads/04-heapsort/source/: heapsort.cpp
ads/05-hoaresort/: CMakeLists.txt
ads/05-hoaresort/source/: hoaresort.cpp
ads/06-bitwisesort/: CMakeLists.txt
ads/06-bitwisesort/source/: bitwisesort.cpp
ads/07-topologicalsort/: CMakeLists.txt  vcpkg.json
ads/07-topologicalsort/include/: boolmatrix.h
ads/07-topologicalsort/source/: boolmatrix.cpp  topologicalsort.cpp
oop/: CMakeLists.txt
oop/01-fraction/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Fraction.cpp  Fraction.h  MainFraction.cpp  README.md  TestFraction.cpp  vcpkg.json
oop/02-array/: .cppcheck.supp  CMakeLists.txt  vcpkg.json
oop/02-array/include/: array.h
oop/02-array/source/: array.cpp  mainArray.cpp
oop/02-array/tests/: testArray.cpp
oop/03-boolvector/: CMakeLists.txt
oop/03-boolvector/include/: boolvector.h
oop/03-boolvector/source/: boolvector.cpp
oop/03-boolvector/tests/: testboolvector.cpp
oop/04-boolmatrix/: CMakeLists.txt
oop/04-boolmatrix/include/: boolmatrix.h
oop/04-boolmatrix/source/: boolmatrix.cpp  boolvector.cpp
oop/05-list/: CMakeLists.txt  vcpkg.json
oop/05-list/include/: list.h
oop/05-list/source/: list.cpp
oop/06 - set/include/: set.h
oop/06 - set/source/: set.cpp
